async await script added

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.get-number-btn {
+/* .get-number-btn {
    background: black;
    color: white;
    font-size: 50px;
@@ -10,4 +10,4 @@
    font-family: Arial;
    font-size: 40px;
    padding-bottom: 30px;
-}
+} */
